--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "^8.1",
         "laravel/framework": "^10.0|^11.0",
-        "echolabs/prism": "^1.0",
+        "echolabsdev/prism": "^0.3.0",
         "livewire/livewire": "^3.0"
     },
     "autoload": {
